@@ -38,7 +38,7 @@ exception statement from your version. */
 
 package java.util.prefs;
 
-import gnu.classpath.toolkit.DefaultDaemonThreadFactory;
+import gnu.java.util.prefs.EventDispatcher;
 import gnu.java.util.prefs.NodeWriter;
 
 import java.io.ByteArrayOutputStream;
@@ -49,8 +49,6 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.TreeSet;
-import java.util.concurrent.Executor;
-import java.util.concurrent.Executors;
 
 /**
  * Partial implementation of a Preference node.
@@ -1238,18 +1236,17 @@ public abstract class AbstractPreferences extends Preferences {
      */
     private void fire(final PreferenceChangeEvent event)
     {
-      for (final PreferenceChangeListener listener : preferenceListeners)
+      Iterator it = preferenceListeners.iterator();
+      while (it.hasNext())
         {
-          Runnable dispatcher = new Runnable() {
-            public void run()
-            {
-              listener.preferenceChange(event);
-            }
-          };
-          
-          Executor executor =
-            Executors.newSingleThreadExecutor(new DefaultDaemonThreadFactory());
-          executor.execute(dispatcher);
+          final PreferenceChangeListener l = (PreferenceChangeListener) it.next();
+          EventDispatcher.dispatch(new Runnable()
+                                   {
+                                     public void run()
+                                     {
+                                       l.preferenceChange(event);
+                                     }
+                                   });
         }
     }
 
@@ -1261,21 +1258,20 @@ public abstract class AbstractPreferences extends Preferences {
      */
     private void fire(final NodeChangeEvent event, final boolean added)
     {
-      for (final NodeChangeListener listener : nodeListeners)
+      Iterator it = nodeListeners.iterator();
+      while (it.hasNext())
         {
-          Runnable dispatcher = new Runnable() {
-            public void run()
-            {
-              if (added)
-                listener.childAdded(event);
-              else
-                listener.childRemoved(event);
-            }
-          };
-          
-          Executor executor =
-            Executors.newSingleThreadExecutor(new DefaultDaemonThreadFactory());
-          executor.execute(dispatcher);
+          final NodeChangeListener l = (NodeChangeListener) it.next();
+          EventDispatcher.dispatch(new Runnable()
+                                   {
+                                     public void run()
+                                     {
+                                       if (added)
+                                         l.childAdded(event);
+                                       else
+                                         l.childRemoved(event);
+                                     }
+                                   });
         }
     }
 
