@@ -1,5 +1,15 @@
 2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* gnu/java/util/prefs/EventDispatcher.java:
+	Re-added.
+	* gnu/java/util/prefs/GConfBasedPreferences.java,
+	* gnu/java/util/prefs/gconf/GConfNativePeer.java,
+	* java/util/prefs/AbstractPreferences.java,
+	* native/jni/gconf-peer/GConfNativePeer.c:
+	Regress to 0.96 versions.
+
+2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* java/net/URI.java:
 	(compareTo(URI)): Change comparison sign so it
 	operates in the correct direction.
